--- a/app/src/main/res/layout/folder_item_viewed.xml
+++ b/app/src/main/res/layout/folder_item_viewed.xml
@@ -25,8 +25,9 @@
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:text="Folder Name"
+                android:fontFamily="@font/indie_flower"
                 android:textColor="@color/blue"
-                android:textSize="16sp"
+                android:textSize="18sp"
                 android:textStyle="bold"/>
         </RelativeLayout>
 
@@ -36,7 +37,8 @@
             android:layout_height="wrap_content"
             android:textColor="@color/black"
             android:paddingTop="5dp"
-            android:textSize="13sp" />
+            android:fontFamily="@font/indie_flower"
+            android:textSize="15sp" />
     </LinearLayout>
 
 
