--- a/app/src/main/res/layout/fragment_bottom_sheet_dialog.xml
+++ b/app/src/main/res/layout/fragment_bottom_sheet_dialog.xml
@@ -15,11 +15,11 @@
         android:layout_marginStart="0dp"
         android:layout_marginTop="10dp"
         android:layout_margin="15dp"
-        android:fontFamily="@font/adamina"
+        android:fontFamily="@font/indie_flower"
         android:text="Select an action"
         android:textAlignment="center"
         android:textColor="@color/black"
-        android:textSize="20sp"
+        android:textSize="22sp"
         android:textStyle="bold" />
 
     <LinearLayout
@@ -43,7 +43,8 @@
                 android:text="Archive"
                 android:textColor="@color/black"
                 android:paddingTop="3dp"
-                android:textSize="16sp"
+                android:textSize="19sp"
+                android:fontFamily="@font/indie_flower"
                 android:layout_marginStart="30dp"
                 android:textStyle="bold" />
 
@@ -82,7 +83,8 @@
                 android:text="Star"
                 android:textColor="@color/black"
                 android:paddingTop="3dp"
-                android:textSize="16sp"
+                android:textSize="19sp"
+                android:fontFamily="@font/indie_flower"
                 android:layout_marginStart="30dp"
                 android:textStyle="bold"/>
         </RelativeLayout>
@@ -115,7 +117,8 @@
                 android:text="Add To Folder"
                 android:textColor="@color/black"
                 android:paddingTop="1dp"
-                android:textSize="16sp"
+                android:textSize="19sp"
+                android:fontFamily="@font/indie_flower"
                 android:layout_marginStart="30dp"
                 android:textStyle="bold"/>
         </RelativeLayout>
