--- a/app/src/main/res/layout/fragment_bottom_sheets.xml
+++ b/app/src/main/res/layout/fragment_bottom_sheets.xml
@@ -14,7 +14,7 @@
         android:layout_marginStart="0dp"
         android:layout_marginTop="10dp"
         android:layout_margin="15dp"
-        android:fontFamily="@font/adamina"
+        android:fontFamily="@font/indie_flower"
         android:text="Create new Folder"
         android:textAlignment="center"
         android:textColor="@color/black"
@@ -28,18 +28,48 @@
         android:layout_marginTop="-43dp"
         android:layout_marginStart="315dp"/>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="28dp"
+        android:fontFamily="@font/indie_flower"
+        android:text="Name"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+         />
+
     <EditText
         android:id="@+id/categoryName"
         android:layout_width="325dp"
-        android:layout_height="61dp"
+        android:layout_height="50dp"
         android:padding="15dp"
-        android:layout_marginTop="10dp"
         android:layout_marginStart="15dp"
         android:background="@drawable/field_borders"
         android:capitalize="sentences"
         android:defaultFocusHighlightEnabled="true"
-        android:fontFamily="@font/adamina"
-        android:hint="Name"
+        android:fontFamily="@font/indie_flower"
+        android:textColor="@color/black"
+        android:textColorHint="@color/black" />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="17dp"
+        android:layout_marginTop="10dp"
+        android:fontFamily="@font/indie_flower"
+        android:text="Description(Optional)"
+        android:textColor="@color/black"
+        android:textSize="20sp" />
+    <EditText
+        android:id="@+id/categoryDescription"
+        android:layout_width="325dp"
+        android:layout_height="50dp"
+        android:padding="15dp"
+        android:layout_marginStart="15dp"
+        android:background="@drawable/field_borders"
+        android:capitalize="sentences"
+        android:defaultFocusHighlightEnabled="true"
+        android:fontFamily="@font/indie_flower"
         android:textColor="@color/black"
         android:textColorHint="@color/black" />
     <TextView
@@ -48,7 +78,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="80dp"
         android:layout_marginStart="20dp"
-        android:fontFamily="@font/adamina"
+        android:fontFamily="@font/indie_flower"
         android:textColor="@color/black"
-        android:textSize="13sp" />
+        android:textSize="15sp" />
 </LinearLayout>
