--- a/app/src/main/res/layout/note_item.xml
+++ b/app/src/main/res/layout/note_item.xml
@@ -41,16 +41,17 @@
             <ImageView
                 android:id="@+id/displayMore"
                 android:layout_width="24dp"
-                android:layout_height="22dp"
+                android:layout_height="19dp"
                 android:layout_alignParentEnd="true"
                 android:layout_marginEnd="55dp"
+                android:layout_marginTop="2dp"
                 android:src="@drawable/ic_more_info"/>
             <ImageView
                 android:id="@+id/deleteButton"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:layout_alignParentEnd="true"
-                android:src="@drawable/ic_delete"/>
+                android:src="@drawable/ic_trash"/>
         </RelativeLayout>
 
         <TextView
