--- a/app/src/main/res/layout/activity_password_verification.xml
+++ b/app/src/main/res/layout/activity_password_verification.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical"
-    tools:context=".user_passwords.PasswordActivity">
+    tools:context=".user_passwords.UserAuth">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
