--- a/app/src/main/res/layout/fragment_relationships.xml
+++ b/app/src/main/res/layout/fragment_relationships.xml
@@ -10,7 +10,9 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/relationshipRV"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="610dp"
+        android:layout_marginTop="40dp"
+        android:padding="16dp"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/addRelationship"
