--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -37,5 +37,8 @@
         <item name="android:fontFamily">@font/indie_flower</item>
         <item name="android:textStyle">bold</item>
     </style>
+    <style name="NavigationDrawerTextStyle" parent="TextAppearance.AppCompat.Body2">
+        <item name="android:fontFamily">@font/indie_flower</item>
+    </style>
 
 </resources>
