--- a/app/src/main/res/layout/activity_add_relationship.xml
+++ b/app/src/main/res/layout/activity_add_relationship.xml
@@ -95,7 +95,7 @@
 
         <TextView
             android:id="@+id/textView2"
-            android:layout_width="238dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
@@ -105,6 +105,19 @@
             android:text="Relationship status(1-10):"
             android:textColor="@color/black"
             android:textSize="15dp" />
+
+        <TextView
+            android:id="@+id/statusHint"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="154dp"
+            android:layout_marginTop="127dp"
+            android:fontFamily="@font/indie_flower"
+            android:text="Status hints"
+            android:textColor="@color/purple"
+            android:textSize="12dp" />
     </RelativeLayout>
 
 </RelativeLayout>
