--- a/app/src/main/res/layout/activity_birthday.xml
+++ b/app/src/main/res/layout/activity_birthday.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".BirthdayActivity">
+    tools:context=".toasts.BirthdayActivity">
 
     <TextView
         android:id="@+id/textView"
