--- a/app/src/main/res/layout/activity_view_notes_in_category.xml
+++ b/app/src/main/res/layout/activity_view_notes_in_category.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical"
     android:padding="16dp"
     android:background="#F4F4F4"
-    tools:context=".categories.categoryviews.ViewNotesInFolder">
+    tools:context=".folders.categoryviews.ViewNotesInFolder">
 
     <Button
         android:id="@+id/saveFolder"
