--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,23 +3,23 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/nav_home">
+    app:startDestination="@+id/nav_password">
 
     <fragment
-        android:id="@+id/nav_home"
-        android:name="com.example.notessqlite.archives.ui.home.HomeFragment"
+        android:id="@+id/nav_password"
+        android:name="com.example.notessqlite.archives.ui.trash.TrashFragment"
         android:label="@string/menu_password"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_recycle_bin" />
 
     <fragment
         android:id="@+id/nav_trash"
-        android:name="com.example.notessqlite.archives.ui.gallery.GalleryFragment"
+        android:name="com.example.notessqlite.archives.ui.password.PasswordFragment"
         android:label="@string/menu_trash"
         tools:layout="@layout/fragment_gallery" />
 
     <fragment
         android:id="@+id/nav_slideshow"
-        android:name="com.example.notessqlite.archives.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
+        android:name="com.example.notessqlite.archives.ui.birthday.BirthdayFragment"
+        android:label="@string/menu_birthdays"
+        tools:layout="@layout/fragment_birthday" />
 </navigation>
