--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -14,7 +14,7 @@
             android:title="@string/menu_trash" />
         <item
             android:id="@+id/nav_birthdays"
-            android:icon="@drawable/birthday_icon"
-            android:title="@string/menu_birthdays" />
+            android:icon="@drawable/ic_relationship"
+            android:title="@string/menu_relationships" />
     </group>
 </menu>
