--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -18,8 +18,8 @@
         tools:layout="@layout/fragment_gallery" />
 
     <fragment
-        android:id="@+id/nav_slideshow"
+        android:id="@+id/nav_relationships"
         android:name="com.example.notessqlite.archives.ui.birthday.BirthdayFragment"
-        android:label="@string/menu_birthdays"
-        tools:layout="@layout/fragment_birthday" />
+        android:label="@string/menu_relationships"
+        tools:layout="@layout/fragment_relationships" />
 </navigation>
