--- a/app/src/main/res/layout/fragment_bottom_sheets.xml
+++ b/app/src/main/res/layout/fragment_bottom_sheets.xml
@@ -47,6 +47,7 @@
         android:layout_marginStart="15dp"
         android:background="@drawable/field_borders"
         android:capitalize="sentences"
+        android:textSize="20sp"
         android:defaultFocusHighlightEnabled="true"
         android:fontFamily="@font/indie_flower"
         android:textColor="@color/black"
