--- a/app/src/main/res/layout/activity_loading.xml
+++ b/app/src/main/res/layout/activity_loading.xml
@@ -6,6 +6,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:src="@drawable/loading_anim"
-    tools:context=".LoadingActivity">
+    tools:context=".notes.LoadingActivity">
 
 </pl.droidsonroids.gif.GifImageView>
